# asset_factory_router

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  G1_READINESS_REPORT.md  HANDOFF_TO_CLAUDE_OR_GOOGLE.md  HANDOFF_TO_CODEX.md  NEXT_TASKS.md  PROJECT_INDEX.md  README.md  RELEASE_NOTES.md  RUN_TEST.md  STATUS.md  V0.1.1_READINESS_REPORT.md  V0.2_DEV_PLAN.md  V0.2_ENGINEERING_REPORT.md  V0.2_LOCKED_SUMMARY.md  V0.2_LOCKED_VALIDATION_LOG.md  VERSION.md  VERSION_LOCK.md  WALKTHROUGH.md  pyproject.toml  requirements.txt  run_validation.py
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
config/: provider_profiles.default.json  router_weights.default.json  router_weights.json  style_profiles.default.json
docs/: AUTO_WORKFLOW_INVENTORY.md  AUTO_WORKFLOW_OWNER_BRIEFING_TEMPLATE.md  ENGINEERING_WORKFLOW.md  G0_G1_G2_TASK_QUEUE_MAP.md  METRICS_BASELINE.md  OWNER_PRICING_APPROVAL_GATE.md  OWNER_PRICING_CI_GATE.md  OWNER_PRICING_CI_GATE_CONTRACT_REDESIGN_G2_REVIEW.md  OWNER_PRICING_CI_GATE_CONTRACT_REDESIGN_PLAN.md  OWNER_PRICING_CI_VERIFIER_WIRING.md  OWNER_PRICING_COMMAND_CONTRACT.md  OWNER_PRICING_COMMAND_CONTRACT_G2_REVIEW.md  OWNER_PRICING_DRY_RUN.md  OWNER_PRICING_FAKE_EVIDENCE_PACKET_ARTIFACTS.md  OWNER_PRICING_FAKE_EVIDENCE_PACKET_VERIFIER.md  OWNER_PRICING_FAKE_IMPLEMENTATION_EVIDENCE_G2_REVIEW.md  OWNER_PRICING_FAKE_IMPLEMENTATION_EVIDENCE_PACKET.md  OWNER_PRICING_FINAL_IMPORT_AUDIT_SCHEMA.md  OWNER_PRICING_FINAL_IMPORT_CHECKLIST.md  OWNER_PRICING_FINAL_IMPORT_DESIGN_GATE.md  OWNER_PRICING_FINAL_IMPORT_FAKE_REHEARSAL.md  (+13 more)
(+128 files in other folders)
